# zavia-dev-env

./: .dev.env.example  .env  .env.test  .gitignore  Dockerfile  README.md  UNS README.md  docker-compose.dev.yml  docker-compose.yml  setup_uns_oauth.sh
.github/: copilot-instructions.md
app/: pyproject.toml
app/src/: .env  main.py
app/src/api/: __init__.py  deps.py
app/src/api/routes/: __init__.py  devices.py  metrics.py  mqtt.py  nodes.py  uns.py
app/src/core/: logger.py  settings.py
app/src/postgresql/: __init__.py  models.py
app/src/uns/: chirpstack_handler.py  crud.py  datatypes.py  models.py  mqtt_manager.py  sie_databus_handler.py  sparkplugB_handler.py  uns.py
app/src/uns/tahu/core/: array_packer.py  host_session_establishment.py  readme.md  sparkplug_b.py
app/src/uns/tahu/sparkplug_b/: sparkplug_b.json  sparkplug_b.proto  sparkplug_b_c_sharp.proto
compose/: docker-compose-authentik.yml  docker-compose-influxdb.yml  docker-compose-mosquitto.yml  docker-compose-pgadmin.yml  docker-compose-postgres.yml  docker-compose-redis.yml  docker-compose-sie-sim.yml  docker-compose-socket-proxy.yml  docker-compose-spb-sim.yml  docker-compose-telegraf.yml  docker-compose-traefik-local.yml  docker-compose-uns-builder.yml
docs/: EXECUTION-PLAN.md
mosquitto-conf/: mosquitto.conf  mosquitto_pwd
scripts/: export-authentik-blueprint.sh  export-authentik-config.sh  force-reapply-authentik-blueprint.sh  release_uns_image.sh  setup-local-hosts.sh  start-dev.sh  start_dev.sh  status.sh  stop-dev.sh
spb_sim/: Dockerfile  README.md  main.py  pyproject.toml
(+28 files in other folders)
