[project]
name = "uns-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "paho-mqtt>=2.1.0",
    "protobuf<3.21",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "uvicorn>=0.38.0",
    "types-paho-mqtt>=1.6.0.20240321",
    "sqlalchemy2-stubs>=0.0.2a38",
]

[tool.setuptools]
packages = ["api", "core", "db", "services"]
